<resources>
    <string name="app_name">Pemula</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_developer">Menu Developer</string>
    <string name="home_second">Home Second</string>
    <string name="create_new_account">Create new account !</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="tv_silahkan">Silahkan Masuk Untuk Memakai Aplikasinya</string>
    <string name="logo">string/img_logo</string>
    <string name="sign_in">Sign in</string>
</resources>