<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pemula.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    <action
        android:id="@+id/action_HomeFragmet_to_HomeSecondFragment"
        app:destination="@+id/nav_home_second"/>
    </fragment>

    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.pemula.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">

        <action
            android:id="@+id/action_HomeFragmet_to_HomeSecondFragment"
            app:destination="@+id/nav_home"/>
        <argument
            android:name="myArg"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.pemula.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery"/>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.pemula.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow"/>

    <fragment
        android:id="@+id/nav_developer"
        android:name="com.example.pemula.ui.depeloper.DepeloverFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow"/>

</navigation>